--- a/config/zones/JP-HR.yaml
+++ b/config/zones/JP-HR.yaml
@@ -24,7 +24,9 @@ country_name: Japan
 currency: JPY
 delays:
   production: 5
-disclaimer: The data provider (Hokuriku Electric Power Co.,Inc.) provides live data only for solar and unknown. We are working on improving the data quality for this zone.
+disclaimer: The data provider (Hokuriku Electric Power Co.,Inc.) provides live data
+  only for solar and unknown. We are working on improving the data quality for this
+  zone.
 emissionFactors:
   direct:
     hydro discharge:
@@ -153,8 +155,16 @@ fallbackZoneMixes:
         solar: 0.05969048291522835
         unknown: 0.02047979428559259
         wind: 0.005666854920707754
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
+isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
 parsers:
   consumptionForecast: JP.fetch_consumption_forecast
   generationForecast: JP.fetch_generation_forecast
