--- a/config/zones/PL.yaml
+++ b/config/zones/PL.yaml
@@ -540,6 +540,14 @@ fallbackZoneMixes:
         wind: 0.15788617303391778
 has_day_ahead_price_license: true
 hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
+isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
