--- a/config/zones/AU-SA.yaml
+++ b/config/zones/AU-SA.yaml
@@ -286,18 +286,26 @@ fallbackZoneMixes:
         solar: 0.2668651967564851
         unknown: 0.0
         wind: 0.42456316091004337
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.5635
+isRenewable:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.5635
 parsers:
   consumptionForecast: AEMO.fetch_consumption_forecast
   price: OPENNEM.fetch_price
   production: OPENNEM.fetch_production
   productionCapacity: OPENELECTRICITY.fetch_production_capacity
 region: Oceania
-timezone: Australia/Adelaide
-zone_name: South Australia
 sources:
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+timezone: Australia/Adelaide
+zone_name: South Australia
