--- a/config/zones/AU-TAS-KI.yaml
+++ b/config/zones/AU-TAS-KI.yaml
@@ -1,4 +1,8 @@
-_comment: 'Capacity data fetched from https://www.hydro.com.au/docs/default-source/clean-energy/hybrid-energy-solutions/king_island.pdf . Oil capacity is said to run with blended biodiesel : hense the diesel capacity is equal to the biomass capacity. Parsing for production is done on instantaneous measurements : this is not reliable at all'
+_comment:
+  'Capacity data fetched from https://www.hydro.com.au/docs/default-source/clean-energy/hybrid-energy-solutions/king_island.pdf
+  . Oil capacity is said to run with blended biodiesel : hense the diesel capacity
+  is equal to the biomass capacity. Parsing for production is done on instantaneous
+  measurements : this is not reliable at all'
 bounding_box:
   - - 143.33716881600026
     - -40.627373955999886
@@ -151,15 +155,23 @@ fallbackZoneMixes:
         solar: 0.1199307309665122
         unknown: 0.0
         wind: 0.2054531930390045
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.6608
+isRenewable:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.6608
 parsers:
   production: ajenti.fetch_production
 region: Oceania
-timezone: Australia/Hobart
-zone_name: King Island
 sources:
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+timezone: Australia/Hobart
+zone_name: King Island
