--- a/config/zones/AU-WA-RI.yaml
+++ b/config/zones/AU-WA-RI.yaml
@@ -1,4 +1,6 @@
-_comment: 'Capacity data fetched from the test payload (capacity is sent in all payloads). Parsing for production is done on instantaneous measurements : this is not reliable at all'
+_comment: 'Capacity data fetched from the test payload (capacity is sent in all payloads).
+  Parsing for production is done on instantaneous measurements : this is not reliable
+  at all'
 bounding_box:
   - - 114.94014224400007
     - -32.52536222099991
@@ -121,15 +123,23 @@ fallbackZoneMixes:
         solar: 0.06026681890829423
         unknown: 0.0
         wind: 0.1463649654920588
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.2338
+isRenewable:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.2338
 parsers:
   production: ajenti.fetch_production
 region: Oceania
-timezone: Australia/Perth
-zone_name: Rottnest Island
 sources:
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+timezone: Australia/Perth
+zone_name: Rottnest Island
