--- a/config/zones/ES-ML.yaml
+++ b/config/zones/ES-ML.yaml
@@ -129,17 +129,25 @@ fallbackZoneMixes:
         solar: 0.0
         unknown: 0.0
         wind: 0.0
-has_day_ahead_price_license: True
-hide_day_ahead_price: False
+has_day_ahead_price_license: true
+hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.0747
+isRenewable:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.0747
 parsers:
   consumption: ES.fetch_consumption
   production: ES.fetch_production
   productionCapacity: REE.fetch_production_capacity
 region: Europe
-timezone: Europe/Madrid
-zone_name: Melilla
 sources:
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+timezone: Europe/Madrid
+zone_name: Melilla
