--- a/config/zones/GR.yaml
+++ b/config/zones/GR.yaml
@@ -468,6 +468,14 @@ fallbackZoneMixes:
         wind: 0.20026030888063462
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.2412
+isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.2131
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
