--- a/config/zones/JP-KN.yaml
+++ b/config/zones/JP-KN.yaml
@@ -189,18 +189,26 @@ fallbackZoneMixes:
         solar: 0.07460594186010626
         unknown: 0.030073678811974553
         wind: 0.002427072768801394
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
+isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
 parsers:
   consumptionForecast: JP.fetch_consumption_forecast
   generationForecast: JP.fetch_generation_forecast
   price: JP.fetch_price
   production: JP_KN.fetch_production
 region: Asia
-timezone: Asia/Tokyo
-zone_name: Kansai
 sources:
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+timezone: Asia/Tokyo
+zone_name: Kansai
