--- a/config/zones/NO.yaml
+++ b/config/zones/NO.yaml
@@ -19,7 +19,6 @@ contributors:
   - corradio
 country: 'NO'
 country_name: Norway
-# Electricity is traded in EUR
 currency: EUR
 emissionFactors:
   direct:
@@ -242,8 +241,16 @@ fallbackZoneMixes:
         solar: 0.005032172878244702
         unknown: 0.004538204352072401
         wind: 0.12701186508811527
-has_day_ahead_price_license: True
-hide_day_ahead_price: False
+has_day_ahead_price_license: true
+hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
+isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
