--- a/config/zones/PH-LU.yaml
+++ b/config/zones/PH-LU.yaml
@@ -251,15 +251,29 @@ fallbackZoneMixes:
         solar: 0.020418652513402993
         unknown: 0.054426137887670575
         wind: 0.01113649280728119
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.1354
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.1124
+isRenewable:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.1354
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.1124
 parsers:
   production: IEMOP.fetch_production
 region: Asia
 sources:
-  National Laboratory of the Rockies:
-    link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
+  National Laboratory of the Rockies:
+    link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
 timezone: Asia/Manila
 zone_name: Luzon
