--- a/config/zones/PH.yaml
+++ b/config/zones/PH.yaml
@@ -245,14 +245,28 @@ fallbackZoneMixes:
         solar: 0.021186116587224194
         unknown: 0.05981327473921477
         wind: 0.009391697715065647
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.1854
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.1695
+isRenewable:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.1854
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.1695
 region: Asia
 sources:
-  National Laboratory of the Rockies:
-    link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
+  National Laboratory of the Rockies:
+    link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
 subZoneNames:
   - PH-LU
   - PH-MI
