--- a/config/zones/PT.yaml
+++ b/config/zones/PT.yaml
@@ -508,6 +508,14 @@ fallbackZoneMixes:
         wind: 0.28972267240405203
 has_day_ahead_price_license: true
 hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.6331
+isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.576
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
