--- a/config/zones/RS.yaml
+++ b/config/zones/RS.yaml
@@ -342,8 +342,16 @@ fallbackZoneMixes:
         solar: 0.01441557250678779
         unknown: 0.006567137148345253
         wind: 0.03546266393241745
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
+isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
