--- a/config/zones/SI.yaml
+++ b/config/zones/SI.yaml
@@ -473,6 +473,14 @@ fallbackZoneMixes:
         wind: 0.04625761651149296
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
+isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
+isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 1.0
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
