--- a/config/zones/TW.yaml
+++ b/config/zones/TW.yaml
@@ -198,7 +198,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average
-        value: 465.73
+        value: 465.71
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
@@ -249,7 +249,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average; IPCC 2014
-        value: 489.73
+        value: 489.71
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; IPCC 2014
@@ -422,16 +422,30 @@ fallbackZoneMixes:
         solar: 0.06550111905166345
         unknown: 0.03142705539402686
         wind: 0.037479238587619625
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
+isLowCarbon:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.2042
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.1756
+isRenewable:
+  battery discharge:
+    - datetime: '2020-01-01'
+      value: 0.0776
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.0352
 parsers:
   production: TAIPOWER.fetch_production
   productionCapacity: EMBER.fetch_production_capacity
 region: Asia
-timezone: Asia/Taipei
-zone_name: Taiwan
 sources:
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+timezone: Asia/Taipei
+zone_name: Taiwan
