--- a/config/zones/UA.yaml
+++ b/config/zones/UA.yaml
@@ -28,7 +28,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average
-        value: 231.08
+        value: 231.07
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
@@ -38,15 +38,18 @@ emissionFactors:
         source: Electricity Maps, 2022 zone average
         value: 188.55
     unknown:
-      _comment: estimated yearly share of solar & wind in this mixed renewable category based on installed capacity in Y2018; assumes 50% solar, 50% wind renewable mix
-      source: Wikipedia page for Renewable energy in Ukraine; Electricity Maps contrib issue number 1809
+      _comment: estimated yearly share of solar & wind in this mixed renewable category
+        based on installed capacity in Y2018; assumes 50% solar, 50% wind renewable
+        mix
+      source: Wikipedia page for Renewable energy in Ukraine; Electricity Maps contrib
+        issue number 1809
       value: 0.0
   lifecycle:
     hydro discharge:
       - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average; IPCC 2014
-        value: 255.08
+        value: 255.07
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; IPCC 2014
@@ -56,8 +59,11 @@ emissionFactors:
         source: Electricity Maps, 2022 zone average; IPCC 2014
         value: 212.55
     unknown:
-      _comment: estimated yearly share of solar & wind in this mixed renewable category based on installed capacity in Y2018; assumes 50% solar, 50% wind renewable mix
-      source: Wikipedia page for Renewable energy in Ukraine; Electricity Maps contrib issue number 1809
+      _comment: estimated yearly share of solar & wind in this mixed renewable category
+        based on installed capacity in Y2018; assumes 50% solar, 50% wind renewable
+        mix
+      source: Wikipedia page for Renewable energy in Ukraine; Electricity Maps contrib
+        issue number 1809
       value: 28.0
 fallbackZoneMixes:
   powerOriginRatios:
@@ -151,12 +157,18 @@ fallbackZoneMixes:
         solar: 0.0003683239452081555
         unknown: 0.06410479689732768
         wind: 0.001572880539009946
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
 isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.6475
   unknown:
     value: 1
 isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.0958
   unknown:
     value: 1
 parsers:
@@ -171,9 +183,9 @@ region: Europe
 sources:
   Electricity Maps contrib issue number 1809:
     link: https://github.com/electricitymaps/electricitymaps-contrib/issues/1809
-  Wikipedia page for Renewable energy in Ukraine:
-    link: https://en.wikipedia.org/wiki/Renewable_energy_in_Ukraine
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
+  Wikipedia page for Renewable energy in Ukraine:
+    link: https://en.wikipedia.org/wiki/Renewable_energy_in_Ukraine
 timezone: Europe/Kiev
 zone_name: Ukraine
