--- a/config/zones/ZA.yaml
+++ b/config/zones/ZA.yaml
@@ -308,22 +308,28 @@ fallbackZoneMixes:
         solar: 0.031763672924306964
         unknown: 0.0
         wind: 0.05303024755245981
-has_day_ahead_price_license: False
-hide_day_ahead_price: False
+has_day_ahead_price_license: false
+hide_day_ahead_price: false
 isLowCarbon:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.1307
   unknown:
     value: 1
 isRenewable:
+  hydro discharge:
+    - datetime: '2020-01-01'
+      value: 0.078
   unknown:
     value: 1
 parsers:
   production: ESKOM.fetch_production
   productionCapacity: EMBER.fetch_production_capacity
 region: Africa
-timezone: Africa/Johannesburg
-zone_name: South Africa
 sources:
   IPCC 2014:
     link: https://www.ipcc.ch/site/assets/uploads/2018/02/ipcc_wg3_ar5_annex-iii.pdf#page=7
   National Laboratory of the Rockies:
     link: https://docs.nrel.gov/docs/fy21osti/80580.pdf
+timezone: Africa/Johannesburg
+zone_name: South Africa
